QmlCompiler: Ensure QObjects returned to AOT-compiled code are wrapped

If a QObject is returned from a method call, the QML engine takes
ownership of it and it needs to be deleted by the garbage collector. Our
generated C++ code so far did not actually take ownership of the object
and thereby caused it to leak.

Pick-to: 6.8
Fixes: QTBUG-138919
Change-Id: I7bd57b3612bf4b98937756e8a7a7c03aff1c9b32
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit b1c48db754c7019e0472d0baf6d71d2bd93a205b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 6efdecd3612bd4a5688ac1b701590413888b3d8e)