src/qml/qml/qqml.cpp
@@ -3186,6 +3186,13 @@ void AOTCompiledContext::initCallValueLookup(
     lookup->call = QV4::Lookup::Call::GetterValueTypeProperty;
 }
 
+void AOTCompiledContext::setObjectImplicitDestructible(QObject *object) const
+{
+    Q_ASSERT(object);
+    QQmlData::get(object, true)->setImplicitDestructible();
+    QV4::QObjectWrapper::ensureWrapper(engine->handle(), object);
+}
+
 } // namespace QQmlPrivate
 
 /*!
