src/qmlcompiler/qqmljscodegenerator_p.h
@@ -316,7 +316,7 @@ private:
     void generateJumpCodeWithTypeConversions(int relativeOffset);
     void generateUnaryOperation(const QString &cppOperator);
     void generateInPlaceOperation(const QString &cppOperator);
-    void generateMoveOutVar(const QString &outVar);
+    void generateMoveOutVarAfterCall(const QString &outVar);
     void generateTypeLookup(int index);
     void generateVariantEqualityComparison(
             QQmlJSRegisterContent nonStorable, const QString &registerName, bool invert);
