src/qmlcompiler/qqmljsoptimizations.cpp
@@ -195,10 +195,22 @@ bool QQmlJSOptimizations::eraseDeadStore(const InstructionAnnotations::iterator 
             it->second.changedRegisterIndex = InvalidRegister;
             it->second.changedRegister = QQmlJSRegisterContent();
         } else {
-            // void the output, rather than deleting it. We still need its variant.
-            const bool adjusted = m_typeResolver->adjustTrackedType(
-                    it->second.changedRegister, m_typeResolver->voidType());
-            Q_ASSERT(adjusted); // Can always convert to void
+            // We can't do this with certain QObjects because they still need tracking as
+            // implicitly destructible by the garbage collector. We may be calling a factory
+            // function and then forgetting the object after all.
+            //
+            // However, objects we need to track that way can only be produced through external
+            // side effects (i.e. function calls).
+
+            const QQmlJSScope::ConstPtr contained = it->second.changedRegister.containedType();
+            if (!it->second.hasExternalSideEffects
+                    || (!contained->isReferenceType()
+                        && !m_typeResolver->canHold(contained, m_typeResolver->qObjectType()))) {
+                // void the output, rather than deleting it. We still need its variant.
+                const bool adjusted = m_typeResolver->adjustTrackedType(
+                        it->second.changedRegister, m_typeResolver->voidType());
+                Q_ASSERT(adjusted); // Can always convert to void
+            }
         }
         m_readerLocations.erase(reader);
 
