tests/auto/qml/qmlcppcodegen/tst_qmlcppcodegen.cpp
@@ -68,6 +68,7 @@ private slots:
     void brokenAs();
     void boundComponents();
     void callContextPropertyLookupResult();
+    void callFactoryFunction();
     void callObjectLookupOnNull();
     void callWithSpread();
     void collectGarbageDuringAotCode();
@@ -1043,6 +1044,19 @@ void tst_QmlCppCodegen::callContextPropertyLookupResult()
     QVERIFY(o);
 
     QVERIFY(qvariant_cast<QQmlComponent *>(o->property("c")) != nullptr);
+}
+
+void tst_QmlCppCodegen::callFactoryFunction()
+{
+    QQmlEngine engine;
+    QQmlComponent c(&engine, QUrl(u"qrc:/qt/qml/TestTypes/callFactory.qml"_s));
+    QVERIFY2(c.isReady(), qPrintable(c.errorString()));
+
+    QTest::ignoreMessage(QtDebugMsg, "Object created: 0");
+    QScopedPointer<QObject> o(c.create());
+    QVERIFY(o);
+
+    QTest::ignoreMessage(QtDebugMsg, "Object destroyed: 0");
 }
 
 void tst_QmlCppCodegen::callObjectLookupOnNull()
